compiler/testData/diagnostics/testsWithJvmBackend/contextReceivers/kt59590.kt
// FIR_IDENTICAL
// WITH_STDLIB
// !RENDER_ALL_DIAGNOSTICS_FULL_TEXT

<!CONFLICTING_JVM_DECLARATIONS!>object O {
    <!CONFLICTING_JVM_DECLARATIONS!>@JvmField
    val INSTANCE: O? = null<!>
}<!>